# faers-mini-signal

./: .gitattributes  .gitignore  AGENTS.md  READ.md  README.md  build_exe.bat  faers_signal.spec  launcher.py  pyproject.toml  requirements.txt  siyou.md
.devcontainer/: devcontainer.json
app/: streamlit_app.py
data/: sample.duckdb
docs/: FUTURE_DESIGN.md  IMPROVEMENTS.md  METHOD.md  PROGRESS.md  REPO_SUMMARY_JA.md  SPEC.md  TODO_REQUIREMENTS.md  USAGE.md  troubleshooting.md
scripts/: seed_sample_db.py
src/faers_signal/: _resources.py  abcd.sql  analysis_spec.py  cli.py  download_openfda.py  ingest_demo.py  ingest_openfda.py  ingest_qfiles.py  metrics.py  normalize_drug.py  schema.sql
tests/: test_abcd_sql.py  test_download_openfda_limits.py  test_ingest_demo.py  test_ingest_openfda.py  test_ingest_qfiles.py  test_metrics.py  test_normalize_drug.py  test_signal_modes.py
